# RobotoMonoJP

./: .gitignore  .gitmodules  AGENTS.md  Dockerfile  LICENSE  Makefile  README.md  font_patcher.py  generate.py  main.py  main_mono.py  pyproject.toml  pyrightconfig.json
.devcontainer/: devcontainer.json
.github/: release.yml
.github/workflows/: ci.yml  release.yml
config/: bizud.yaml  genjyuu.yaml  lineseed.yaml  mplus.yaml  noto.yaml  plex.yaml  zenkaku.yaml
doc/: memo.md
docs/: add_japanese_font.md  spec.md
src/: font_patcher.py  params.py  properties.py  utils.py
src/robotomonojp/: __init__.py  __main__.py  cli.py  config.py  eyecatch.py  fontforge_helpers.py  generator.py  params.py  patcher.py  preview.py  printer.py  properties.py
tests/: test_config.py  test_eyecatch.py  test_fontforge_helpers.py  test_generator.py  test_params.py  test_patcher.py  test_preview.py  test_properties.py
tools/: check_font_metrics.py
