[project]
name = "robotomonojp"
version = "7.0.0"
description = "RobotoMono + Japanese Font + Nerd Font 合成フォント生成CLI"
readme = "README.md"
authors = [{ name = "Junya Morioka", email = "mjun@mjunya.com" }]
requires-python = ">=3.12"
dependencies = ["typer>=0.12", "pydantic>=2.5", "pyyaml>=6.0", "fonttools>=4.50"]

[project.scripts]
robotomonojp = "robotomonojp.cli:main"

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.6", "types-pyyaml>=6.0"]

[build-system]
requires = ["uv_build>=0.11.25,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "src"

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["old", "vendor"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501", "B008"] # B008: typerのOption/Argument呼び出しがdefault引数になる

[tool.ty.src]
include = ["src", "tests"]

[tool.ty.environment]
extra-paths = ["./src"]

[tool.ty.analysis]
allowed-unresolved-imports = ["fontforge", "psMat"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
